outfile
main.c:6:10: error: expected ';' after return statement
        return 0
                ^
                ;
1 error generated.
